--- a/.github/workflows/git-pr-release.yml
+++ b/.github/workflows/git-pr-release.yml
@@ -13,10 +13,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Ruby 3.1 
+    - name: Set up Ruby 3.0
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.1.x
+        ruby-version: 3.0.3
 
     - name: Create a release pull request
       env:
