--- a/.github/workflows/flutter_test.yaml
+++ b/.github/workflows/flutter_test.yaml
@@ -14,14 +14,12 @@ jobs:
     steps:
       - name: set up repository
         uses: actions/checkout@v2
-      - name: set up java
-        uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
+          fetch-depth: 1
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: "2.10.3"
+         channel: 'stable'
       - name: flutter pub get
         run: flutter pub get
-      - name: flutter widget test
+      - name: flutter test
         run: flutter test
